---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "type s : set of boolean\ns()\n"
---
"s"@"src/main.t:5..6" [Type]: set[DefId(PackageId(0), LocalDefId(1))] of boolean
"s"@"src/main.t:9..23" [Set]: <error>
"<root>"@"<unknown>:0..0" [Module(No)]: <error>

error at src/main.t:24..25: cannot use expression as a statement
| error for src/main.t:24..25: this is not a function or procedure
